res/site.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

$font-color: #000;
$background-color: #FFF;
$oob-color: #F1F1F1;
$light-blue: rgb(59, 89, 152);
$dark-blue: rgb(52, 78, 134);
$low-blue: rgb(45, 67, 115);

$width: 1008px;

html, body {
  width: 100%;
  margin: 0px 0px 0px 0px;
  font-family: Georgia,"Bitstream Charter",serif;
  color: $font-color;
  background-color: $oob-color;
}

a:link, a:hover, a:active, a:visited {
  color: inherit;
}

header {
  width: 100%;
  background-color: $background-color;
}

#headerbar {
  width: $width;
  margin-left: auto;
  margin-right: auto;
  padding: 8px 0px 8px 0px;
  h1 {
    display: block;
    margin: 0px 0px 0px 0px;
  }
}

#headerbar a {
  background-image: url("{{ "/theme/res/nouse-logo.png" | prepend: site.baseurl }}");
  background-repeat: no-repeat;
  background-size: 287px 56px;
  background-position: left center;
  padding-left: 287px;
  height: 56px;
  display: block;
  text-decoration: none;
}

#headerbar a span {
  display: none;
}

#primary-menu {
  background-color: $light-blue;
  li:hover {
    background-color: $dark-blue;
  }
}

#secondary-menu {
  background-color: $dark-blue;
  li:hover {
    background-color: $low-blue;
  }
}

#primary-menu, #secondary-menu {
  color: $background-color;
  width: 100%;
  margin: 0px 0px 0px 0px;
  ul {
    margin: 0px auto 0px auto;
    padding: 0px 0px 0px 0px;
    width: $width;
    li {
      padding: 8px 8px 8px 8px;
      list-style-type: none;
      display: inline-block;
      a {
        text-decoration: none;
      }
    }
  }
}

.content {
  width: $width;
  background-color: $background-color;
  margin: 0px auto 0px auto;
  :first-child {
    margin-top: 0px;
  }
  :last-child {
    margin-bottom: 0px;
  }
}

footer {
  width: 100%;
  background-color: $dark-blue;
  color: $background-color;
  margin: 0px 0px 0px 0px;
  padding: 8px 0px 8px 0px;
  div {
    width: $width;
    margin-left: auto;
    margin-right: auto;
  }
}

